trunk/Archive2/6d/8f49e96a67d7e1/output
main.cpp: In constructor 'sp::sp(int, std::string)':
main.cpp:17:16: error: cannot convert 'std::string {aka std::basic_string<char>}' to 'int' in assignment
         p->name=s;
                ^
main.cpp: In member function 'int sp::operator*()':
main.cpp:25:14: error: cannot convert 'person' to 'int' in return
      return *p;   
              ^
main.cpp: In member function 'int* sp::operator->()':
main.cpp:29:12: error: cannot convert 'person*' to 'int*' in return
     return p;
            ^
main.cpp: In function 'int main()':
main.cpp:36:15: error: request for member 'name' in '* s1.sp::operator->()', which is of non-class type 'int'
     cout<<s1->name<<"  "<<s1->age<<endl;
               ^
main.cpp:36:31: error: request for member 'age' in '* s1.sp::operator->()', which is of non-class type 'int'
     cout<<s1->name<<"  "<<s1->age<<endl;
                               ^
